<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color333">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_16"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_12"
            android:paddingRight="@dimen/padding_12"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_ddd"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_36"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_phone"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_24"
            android:textColor="@color/color333"
            android:textSize="@dimen/font_14"
            />
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_24"
            android:textColor="@color/color333"
            android:textSize="@dimen/font_14"
            android:paddingLeft="@dimen/padding_12"
            android:inputType="number"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_ddd"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_time"
            android:textColor="@color/color333"
            android:gravity="center_vertical"
            android:textSize="@dimen/font_14"
            android:layout_marginLeft="@dimen/margin_24"
            />
        <EditText
            android:id="@+id/et_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_24"
            android:textColor="@color/color333"
            android:textSize="@dimen/font_14"
            android:paddingLeft="@dimen/padding_12"
            android:inputType="number"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_ddd"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/random_space"
            android:textColor="@color/color333"
            android:gravity="center_vertical"
            android:textSize="@dimen/font_14"
            android:layout_marginLeft="@dimen/margin_24"
            />
        <EditText
            android:id="@+id/et_random"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_24"
            android:textColor="@color/color333"
            android:textSize="@dimen/font_14"
            android:paddingLeft="@dimen/padding_12"
            android:inputType="number"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_ddd"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/tv_temp_cb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/test_flag"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textSize="@dimen/font_14"
            android:layout_marginLeft="@dimen/margin_24"
            />
        <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_temp_cb"
            android:layout_marginRight="@dimen/margin_24"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_ddd"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"/>

    <TextView
        android:id="@+id/tv_to_send"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingLeft="@dimen/padding_36"
        android:paddingRight="@dimen/padding_36"
        android:text="@string/to_send_msg"
        android:gravity="center_vertical"
        android:textColor="@color/color333"
        android:textSize="@dimen/font_15"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@color/colorccc"
        />
</LinearLayout>
